--- a/ValidationForm2/style.css
+++ b/ValidationForm2/style.css
@@ -1,3 +1,46 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  line-height: 1.5;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+input,
+button,
+textarea,
+select {
+  font: inherit;
+  outline: none;
+}
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -44,10 +87,6 @@ html {
   flex-direction: column;
 }
 
-.form-group.horizontal {
-  flex-direction: row;
-}
-
 .form-label,
 .form-message {
   text-align: left;
@@ -85,13 +124,14 @@ html {
   font-size: 1.2rem;
   line-height: 1.6rem;
   padding: 4px 0 0;
+  height: 10px;
+  display: block;
 }
 
 .form-submit {
   outline: none;
   background-color: #1dbfaf;
   margin-top: 12px;
-  padding: 12px 16px;
   font-weight: 600;
   color: #fff;
   border: none;
@@ -99,6 +139,7 @@ html {
   font-size: 14px;
   border-radius: 8px;
   cursor: pointer;
+  padding: 12px 16px;
 }
 
 .form-submit:hover {
@@ -107,4 +148,68 @@ html {
 
 .spacer {
   margin-top: 36px;
+}
+
+.form-group .sex {
+  display: flex;
+  user-select: none;
+  align-items: baseline;
+  justify-content: space-around;
+}
+
+.sex-group {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+input[name="gender"]:checked + .gender i {
+  visibility: visible;
+  opacity: 1;
+}
+
+.gender {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 18px;
+  height: 18px;
+  border: 2px solid #1ac7b6;
+  border-radius: 50%;
+  margin-right: 20px;
+  cursor: pointer;
+}
+
+.fa-circle {
+  color: #1ac7b6;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.2s linear;
+}
+
+.sex-text {
+  font-size: 14px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.avatar-wrapper{
+  border: 1px dotted #ccc;
+  padding: 15px 20px;
+}
+
+.input-label{
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  cursor: pointer;
+  width: max-content;
+}
+
+.icon-upload {
+  color: #ccc;
+  font-size: 3rem;
+  pointer-events: none;
+  transition: all 0.2s linear;
+
 }
